--- a/patronbloc/android/app/src/main/AndroidManifest.xml
+++ b/patronbloc/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
     package="com.example.patronbloc">
    <application
         android:label="patronbloc"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
