--- a/patronbloc/pubspec.yaml
+++ b/patronbloc/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   rxdart: ^0.27.1
   http: ^0.13.3
   image_picker: ^0.8.0+3
+  mime_type: ^1.0.0
 
 dev_dependencies:
   flutter_test:
